--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -42,7 +42,7 @@
 	                    }
 	                </script>
 	            	<div class="input-icon col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		                <select name="sujetMail" id="objet" class="form-control placeholder-no-fix" onClick="showOrderNumber()">
+		                <select name="sujetMail" id="objet" class="form-control placeholder-no-fix" onchange="showOrderNumber()">
 		                    <option value="" selected>
 		                    	{{ 'footer.contact.selectObject' | trans }}
 		                    </option>
