--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -30,8 +30,8 @@
     <meta property="og:url" content="http://www.lebuffetfrances.com/"/>
     <meta property="og:description" content="Sitio web del Buffet Francés. Tienda en D-21, calle los Sauces, Larapa, Cusco, Peru. Ven a descubrir nuestros productos de las 9am a las 7pm."/>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -50,6 +50,14 @@
       filter='cssrewrite' %}
       <link rel="stylesheet" href="{{ asset_url }}" type="text/css" media="screen"/>
     {% endstylesheets %}
+    <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+    {% javascripts 
+      'js/jssor.js'
+      'js/jssor.slider.js'
+      %}
+      <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    <!-- END JAVASCRIPTS -->
 
     {% if route == 'lbf_admin_new_page'
         or route == 'lbf_admin_edit_page' %}
@@ -154,9 +162,6 @@
         {% javascripts 
           'js/javascripts_lbf.js'
           'js/ajax_load.js'
-          
-          'js/jssor.js'
-          'js/jssor.slider.js'
 
           'js/jquery-cookie/jquery.cookie.js'
           %}
