--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -115,7 +115,7 @@ h2 span {
 		font-size: 1.3em;
 	}
 	h2 span {
-		font-size: 0.6em;
+		font-size: 0.7em;
 	}
 }
 @media (max-width: 477px) {
@@ -554,6 +554,10 @@ textarea {
 	border-top: 1.5px solid transparent !important;
 	padding: 5px 9px !important; 
 	font-size: 1.4em !important;
+}
+
+.height_top {
+	height: 34px !important;
 }
 
 
