--- a/src/LBF/AdminBundle/Resources/views/Admin/pages.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/pages.html.twig
@@ -86,9 +86,9 @@
 														{% endif %}
 													</div>
 													<!-- A ENLEVER !!! -->
-													<div class="center">
+													<!-- <div class="center">
 														{{ pageAsked.dataBaseName }}
-													</div>
+													</div> -->
 												</div>
 
 												{% if 'l' in pageAsked.type %}
