--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -22,7 +22,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Pierre-Arnaud Destremau" name="author"/>
     <meta content="Le Buffet Francés" name="title"/>
-    <meta content="Sitio web del Buffet Francés. Tienda en D-21, calle los Sauces, Larapa, Cusco, Peru. Ven a descubrir nuestros embutidos, pasteles, pan y frascos de mermelada. Nuestra charcuteria, pasteleria, panaderia y epiceria esta abierta de las 9am a las 7pm." name="description"/>
+    <meta content="Sitio web del Buffet Francés. Tienda en D-21, calle los Sauces, Larapa, Cusco, Peru. Ven a descubrir nuestros productos franceses: embutidos, pasteles, pan y frascos de mermelada. Nuestra charcuteria, pasteleria, panaderia y epiceria francesa esta abierta de las 9am a las 7pm." name="description"/>
     <meta content="http://www.lebuffetfrances.com{{ asset('img/system/logo/logo-300x300.png') }}" name="image"/>
 
     <!-- Facebook -->
@@ -30,7 +30,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://www.lebuffetfrances.com{{ asset('img/system/logo/logo-300x300.png') }}"/>
     <meta property="og:url" content="http://www.lebuffetfrances.com/"/>
-    <meta property="og:description" content="Sitio web del Buffet Francés. Tienda en D-21, calle los Sauces, Larapa, Cusco, Peru. Ven a descubrir nuestros embutidos, pasteles, pan y frascos de mermelada. Nuestra charcuteria, pasteleria, panaderia y epiceria esta abierta de las 9am a las 7pm."/>
+    <meta property="og:description" content="Sitio web del Buffet Francés. Tienda en D-21, calle los Sauces, Larapa, Cusco, Peru. Ven a descubrir nuestros productos franceses: embutidos, pasteles, pan y frascos de mermelada. Nuestra charcuteria, pasteleria, panaderia y epiceria francesa esta abierta de las 9am a las 7pm."/>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
