--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -21,12 +21,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Pierre-Arnaud Destremau" name="author"/>
+    <meta content="antoine@lebuffetfrances.com" name="email"/>
     <meta content="Le Buffet Francés" name="title"/>
     <meta content="Le Buffet Frances. Tienda en D-21, calle los Sauces, Larapa, San Sebastian, Cusco, Peru. Ven a descubrir nuestros productos franceses: embutidos (jamon, tocino, pates, chorizo, salchicha), pasteles (cakes, pies de fruta o chocolate, choux a la creme, far breton, flan, madalenas, magdalenas, cookies, sables bretons), pan (de trigo, de quinua, de canihua) y frascos (mermelada, compota, vinos). Nuestra charcuteria, pasteleria, panaderia y epiceria francesa esta abierta de las 9am a las 7pm." name="description"/>
     <meta content="http://www.lebuffetfrances.com{{ asset('img/system/logo/logo-300x300.png') }}" name="image"/>
+    <meta content="D-21, Calle los Sauces" name="streetAddress"/>
+    <meta content="Cusco" name="addressLocality"/>
+    <meta content="Cuzco" name="addressRegion"/>
+    <meta content="Peru" name="addressCountry"/>
+    <meta content="" name="title"/>
 
     <!-- Facebook -->
     <meta property="og:title" content="Le Buffet Francés"/>
+    <meta property="og:email" content="antoine@lebuffetfrances.com"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://www.lebuffetfrances.com{{ asset('img/system/logo/logo-300x300.png') }}"/>
     <meta property="og:url" content="http://www.lebuffetfrances.com/"/>
