--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -29,7 +29,7 @@
     <meta content="Cusco" name="addressLocality"/>
     <meta content="Cuzco" name="addressRegion"/>
     <meta content="Peru" name="addressCountry"/>
-    <meta content="" name="title"/>
+    <meta name="keywords" content="le, buffet, frances, productos, franceses, embutidos, jamon, tocino, pates, chorizo, salchicha, pasteles, cakes, pies, fruta, chocolate, choux, creme, far, flan, madalenas, magdalenas, cookies, sables, bretons, pan, trigo, quinua, canihua, frascos, mermeladas, compotas, vinos, charcuteria, pasteleria, panaderia, epiceria, francesa, cusco, peru, larapa, san, sebsatian"/>
 
     <!-- Facebook -->
     <meta property="og:title" content="Le Buffet Francés"/>
